minor spacing issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,7 @@ h2 {
 
 .blue {
   width:60%;
-  /*height:70%;*/
+  height:70%;
   background:#2C4E7A;
   box-shadow:inset 0 4px 4px rgba(0,0,0,0.25);
   border-radius:2px;
